--- a/SistemaBancario/Views/Home/hacerMoviemiento.cshtml
+++ b/SistemaBancario/Views/Home/hacerMoviemiento.cshtml
@@ -7,16 +7,18 @@
 <h2>hacerMoviemiento</h2>
 <div>
     Nombre<h1>@ViewBag.cuenta.nombre</h1>
-    Tipo <h1>@ViewBag.cuenta.categoria</h1>
-    Saldo <h1>@ViewBag.cuenta.saldoinicial</h1>
+    Tipo <h1>@(ViewBag.cuenta.categoria!=1?"Credito":"Propia")</h1>
+    Saldo <h1>@(ViewBag.cuenta.categoria==1? ViewBag.cuenta.saldoinicial:ViewBag.cuenta.limiteSaldo)</h1>
+    Debe <h1>@(ViewBag.cuenta.categoria==1? ViewBag.cuenta.limiteSaldo : ViewBag.cuenta.saldoinicial)</h1>
+
 </div>
 <hr />
 <h1 style="color:red">@Html.ValidationMessage("saldo")</h1>
 <form method="post" action="/Home/hacerMoviemiento">
     Selecion la opcion:
     <select id="tipo" name="tipomov">
-        <option value="1">Agregar</option>
-        <option value="2">Retirar</option>
+        <option value="1">@(ViewBag.cuenta.categoria==1?"Agregar":"Gastar la linea")</option>
+        <option value="2">@(ViewBag.cuenta.categoria==1?"Retirar":"Pagar a la linea")</option>
     </select>
     <input name="idcuenta"  hidden value="@ViewBag.cuenta.id" />
     Descripcion <textarea id="descripcion" name="descripcion"></textarea>
